--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"">
 
-    <title>Porfolio Profile</title>
+    <title>Porfolio Main</title>
 
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:ital,wght@1,500;1,600&display=swap" rel="stylesheet">
 
-    <link href="./assets/css/bootstrap.css" rel="stylesheet"> 
+    <!-- <link href="./assets/css/bootstrap.css" rel="stylesheet">  -->
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
     <link href="./assets/css/custom.css" rel="stylesheet"> 
 
     <!-- Fonts -->
@@ -41,11 +44,11 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="./index.html">About</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="./profile.html">Profile</a>
-              </li>
+              <!-- <li class="nav-item">
+                <a class="nav-link" href="./profile.html">Profile</a>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="./projects.html">Projects</a>
               </li>
@@ -83,7 +86,7 @@
     <!-- Profile information inclusion of about, bio and video -->
     <section id="profile" class=""bg-light mt-5">
       <div class="container">
-        <div class="row my-5 mx-10">
+        <div class="row my-5 gx-5 mx-6">
           <div class="col-5">
             <div class="card card-body">
               <div class="row gx-4 mb-2">
@@ -178,6 +181,7 @@
     </div>
   </section>
 
-    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
   </body>
 </html>
