--- a/projects.html
+++ b/projects.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"">
 
-    <title>Project 2 - Projects</title>
+    <title>Portfolio Projects</title>
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Rambla|Permanent+Marker|Kalam:wght@700|Dancing+Script:wght@700|Aboreto|Montserrat:ital,wght@1,500;1,600&display=swap" rel="stylesheet">
 
-    <link href="./assets/css/bootstrap.css" rel="stylesheet"> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+   
     <link href="./assets/css/custom.css" rel="stylesheet"> 
 
   </head>
@@ -67,11 +68,11 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+                <a class="nav-link" aria-current="page" href="./index.html">About</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="./profile.html">Profile</a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link active" href="./projects.html">Projects</a>
               </li>
@@ -147,7 +148,7 @@
         </div>
         <div class="col-xl-3 mx-auto">
           <div class="card bg-light mb-3">
-            <div class="card-header text-center p-0 mt-n4">Roving Eyes
+            <div class="card-header text-center p-0 mt-n4">Moving Eyes
             </div>
             <div class="card-body px-3">
               <a class="d-block shadow-xl border-radius-xl">
@@ -156,7 +157,7 @@
               <div class="prof-card-heading1 mt-3 my-1">Description
               </div>
               <p class="card-text text-sm" style="color: #fff">
-                This project creates two eyes that follow the mouse around the screen.  It defines both the eye and eyeball as classes that are then used by the javascript to check for a mouse move and based on the location of the mouse, it moves the eyeballs in the same direction. <span style="color: #abb6c2">junk text to make the paragraph longer</span>
+                This project creates two eyes that follow the mouse around the screen.  It defines both the eye and eyeball as classes that are then used by the javascript to check for a mouse move and based on the location of the mouse, it moves the eyeballs in the same direction. <span style="color: #abb6c2">junk text to make the paragraph longer and longer and longer</span>
               </p>
               <div style="margin: 0 auto; width: 200px; text-align: center;">
                 <a href="https://github.com/pamelaarcher/movingeyes" class="btn btn-facebook py-1 px-2">View Project</a>
@@ -198,7 +199,7 @@
               <div class="prof-card-heading1 mt-3 my-1">Description
               </div>
               <p class="card-text text-sm" style="color: #fff">
-                This application acts as a <b><i>factory</i></b>&nbsp for generating a large number of red and blue balls which move around the screen in random patterns.  There is logic to ensure each ball does not go outside of the box container on the page.<span style="color: #abb6c2">junk text to make the paragraph longer and longer and longer and longer</span>
+                This application acts as a <b><i>factory</i></b>&nbsp for generating a large number of red and blue balls which move around the screen in random patterns.  There is logic to ensure each ball does not go outside of the box container on the page.<span style="color: #abb6c2">junk text to make the paragraph longer and longer and longer and longer and longer and longer</span>
               </p>
               <div style="margin: 0 auto; width: 200px; text-align: center;">
                 <a href="https://github.com/pamelaarcher/bigbang" class="btn btn-facebook py-1 px-2">View Project</a>
@@ -212,6 +213,8 @@
     </div>
 </section>
 
-    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
   </body>
 </html>
