--- a/index.html
+++ b/index.html
@@ -101,15 +101,20 @@
                       Pam Archer
                     </h5>
                     <p class="text-card-heading2 font-weight-normal text-sm">
-                      Web Design / Full Stack Developer
+                      Web Design / Full Stack Development
                     </p>
                   </div>
                 </div>
               </div>
               <div class="card-body p-2">
-                <h6 class="text-uppercase text-card-heading1 text-xs font-weight-bolder">About</h6>
+                <h6 class="text-uppercase text-card-heading1 text-xs font-weight-bolder">About Myself</h6>
+                <p class="montserrat-text" style="color:#495057; margin: 5px">I am from Broomfield, Colorado a small bedroom community north of Denver. &nbsp I moved here 5 years ago from the California Bay Area with my spouse to be closer to family and to enjoy the great outdoors that Colorado offers including bicycling, snowboarding and incredible hiking. &nbsp I also love scuba diving and traveling to different world destinations.
+                </p>
+                <p class="montserrat-text" style="color:#495057; margin: 5px">
+                For the past 25+ years, I have worked in the Healthcare industry leading technical teams in the design and delivery of complex software applications. &nbsp I love taking a problem and defining solutions to solve that problem. &nbsp It has been very rewarding to see direct outcomes of the work my team does and how that shows up in the final product.  
+                </p>
                 <p class="montserrat-text" style="color:#495057">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Scelerisque viverra mauris in aliquam sem fringilla. Suscipit adipiscing bibendum est ultricies integer quis auctor. Auctor elit sed vulputate mi sit amet mauris. Aliquet lectus proin nibh nisl condimentum id venenatis a. Mus mauris vitae ultricies leo integer malesuada. Feugiat nibh sed pulvinar proin gravida. Quisque egestas diam in arcu cursus euismod quis viverra nibh. Ac turpis egestas sed tempus urna et pharetra pharetra massa. Condimentum lacinia quis vel eros donec ac odio. Eros donec ac odio tempor orci dapibus ultrices in iaculis.
+                Although this has been a very fulfilling career, I have recently chosen to take an early retirement to get back to my passion of hands-on web development, building beautiful but functional sites for non-profits and small businesses. &nbsp I am currently attending an MIT full stack web development certification program whose projects are featured on this site to bring my skills current and support this goal.  
                 </p>
                 <ul class="list-group text-bio-body">
                   <li class="list-group-item border-0 ps-0 text-sm">
@@ -127,8 +132,7 @@
                   </li>
                   <li class="list-group-item border-0 ps-0 text-sm">
                     <span class="text-bio-heading1">&nbsp Social:</span>
-                  </li>
-                  <li class="list-group-item border-0 ps-0 text-sm">
+
                     &nbsp;&nbsp;&nbsp;&nbsp; 
                     <a href="http://facebook.com/pamela.archer.52" class="btn btn-facebook btn-lg mb-0 mb-0 px-2 py-1 py-1">
                       <i class="fab fa-facebook fa-lg"></i>&nbsp Facebook
@@ -137,18 +141,16 @@
                     <a href="http://instagram.com/pamela.archer.52" class="btn btn-instagram btn-lg mb-0 px-2 py-1">
                       <i class="fab fa-instagram fa-lg" ></i>&nbsp Instagram
                     </a>
-                  </li>
-                  <li class="list-group-item border-0 ps-0 text-sm">
                     &nbsp;&nbsp;&nbsp;&nbsp; 
                     <a href="http://twitter.com/pamearch10" class="btn btn-twitter btn-lg mb-0 px-3 py-1">
                       <i class="fab fa-twitter fa-lg"></i>&nbsp Twitter
                     </a>
-                    &nbsp;&nbsp;&nbsp;&nbsp; 
+                  </li>
+                  <li class="list-group-item border-0 ps-0 text-sm">
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <a href="https://www.youtube.com/channel/UCLt6_Unl7FrCivyF4gpuPtQ" class="btn btn-youtube btn-lg mb-0 px-2 py-1">
                       <i class="fab fa-youtube fa-lg"></i>&nbsp YouTube
                     </a>
-                  </li>
-                  <li class="list-group-item border-0 ps-0 text-sm">
                     &nbsp;&nbsp;&nbsp;&nbsp; 
                     <a href="https://www.linkedin.com/in/pamela-archer-671b471/" class="btn btn-linkedin btn-lg mb-0 px-2 py-1">
                       <i class="fab fa-linkedin fa-lg"></i>&nbsp LinkedIn
@@ -161,21 +163,33 @@
           </div>
         <div class="col-7">
           <h5 class="text-bio-heading1 font-weight-bolder">
-            Work History
+            More About Me
           </h5>
-          
+          <p class="text-sm">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/-MK0WUqsmiU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </p>
+
+          <h5 class="text-bio-heading1 font-weight-bolder">
+            Professional Summary
+          </h5>
           <!-- <p class="text-bio-body text-sm para-spacer"> -->
           <p class="montserrat-text" style="color:#dee2e6; font-size: 16px;">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Scelerisque viverra mauris in aliquam sem fringilla. Suscipit adipiscing bibendum est ultricies integer quis auctor. Auctor elit sed vulputate mi sit amet mauris. Aliquet lectus proin nibh nisl condimentum id venenatis a. Mus mauris vitae ultricies leo integer malesuada. Feugiat nibh sed pulvinar proin gravida. Quisque egestas diam in arcu cursus euismod quis viverra nibh. Ac turpis egestas sed tempus urna et pharetra pharetra massa. Condimentum lacinia quis vel eros donec ac odio. Eros donec ac odio tempor orci dapibus ultrices in iaculis.
+            I joined Kaiser Permanente Health Plan in 2004 as a technical solutions consultant within their internal consulting organization responsible for Information Technology programs requirements gathering and technical designs. &nbsp I worked closely with business partners to deliver optimal technology solutions to address their Membership and Claims related business problems. &nbsp Over the next 18 years, I continued to support large systems replacement and enhancement programs through promotions to different leadership roles including Principal Solutions Architect, Senior and Executive Director where I led teams in the design and delivery of software. &nbsp These included multi-year programs such as the Medicare Modernization Act (MMA), the $850M Claims systems and $1B Membership replacement programs. 
           </p>
           <p class="montserrat-text" style="color:#dee2e6; font-size: 16px;">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Scelerisque viverra mauris in aliquam sem fringilla. Suscipit adipiscing bibendum est ultricies integer quis auctor. Auctor elit sed vulputate mi sit amet mauris. Aliquet lectus proin nibh nisl condimentum id venenatis a. Mus mauris vitae ultricies leo integer malesuada. Feugiat nibh sed pulvinar proin gravida. Quisque egestas diam in arcu cursus euismod quis viverra nibh. Ac turpis egestas sed tempus urna et pharetra pharetra massa. Condimentum lacinia quis vel eros donec ac odio. Eros donec ac odio tempor orci dapibus ultrices in iaculis.
+            Prior to joining Kaiser, I worked for the St Alphonsus Regional Health System in Boise, ID as their Director of IT Planning and Development.&nbsp I led a team of analysts, developers and project managers in the delivery of healthcare solutions, working closely with physicians, patient focus groups, department heads and ancillary services.
           </p>
-          <h5 class="text-bio-heading1 font-weight-bolder">
-            Video
-          </h5>
-          <p class="text-sm para-spacer">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/-MK0WUqsmiU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <h6 class="text-bio-heading1 font-weight-bolder">
+            Degress and Professional Development
+          <ul style="list-style-type:square; color:#dee2e6; font-size: 16px;">
+            <li class="montserrat-text" style="color:#dee2e6; font-size: 16px; margin-top: 6px">&nbsp Bachelors Degree in Computer Science - Seattle Pacific University
+            </li>
+            <li class="montserrat-text" style="color:#dee2e6; font-size: 16px; margin-top: 6px">&nbsp Kaiser Permanente Strategic Leadership Program
+            </li>
+            <li class="montserrat-text" style="color:#dee2e6; font-size: 16px; margin-top: 6px">&nbsp Wharton School of Business – Business Strategy Competitive Advantage Course
+            </li>
+            <li class="montserrat-text" style="color:#dee2e6; font-size: 16px; margin-top: 6px">&nbsp Leading SAFe Agile and SAFe Agile Product Owner/Product Management
+            </li>
         </div>
       </div>
     </div>
