--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             Prior to joining Kaiser, I worked for the St Alphonsus Regional Health System in Boise, ID as their Director of IT Planning and Development.&nbsp I led a team of analysts, developers and project managers in the delivery of healthcare solutions, working closely with physicians, patient focus groups, department heads and ancillary services.
           </p>
           <h6 class="text-bio-heading1 font-weight-bolder">
-            Degress and Professional Development
+            Degrees and Professional Development
           <ul style="list-style-type:square; color:#dee2e6; font-size: 16px;">
             <li class="montserrat-text" style="color:#dee2e6; font-size: 16px; margin-top: 6px">&nbsp Bachelors Degree in Computer Science - Seattle Pacific University
             </li>
