--- a/profile.html
+++ b/profile.html
@@ -4,12 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"">
 
-    <title>Porfolio Profile</title>
+    <title>Porfolio Main</title>
 
-        <!-- Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:ital,wght@1,500;1,600&display=swap" rel="stylesheet">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:ital,wght@1,500;1,600&display=swap" rel="stylesheet">
 
-    <link href="./assets/css/bootstrap.css" rel="stylesheet"> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
+    <!-- <link href="./assets/css/bootstrap.css" rel="stylesheet">  -->
     <link href="./assets/css/custom.css" rel="stylesheet"> 
 
     <!-- Fonts -->
@@ -41,7 +43,7 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+                <a class="nav-link" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="./profile.html">Profile</a>
@@ -72,10 +74,6 @@
                 <a class="fab fa-linkedin fa-lg" href="https://www.linkedin.com/in/pamela-archer-671b471/"></a>
               </li>
             </ul>
-            <!-- <form class="d-flex mt-3 mt-lg-0" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form> -->
           </div>
         </div>
       </div>
@@ -83,7 +81,7 @@
     <!-- Profile information inclusion of about, bio and video -->
     <section id="profile" class=""bg-light mt-5">
       <div class="container">
-        <div class="row my-5 mx-10">
+        <div class="row my-5 gx-5 mx-6">
           <div class="col-5">
             <div class="card card-body">
               <div class="row gx-4 mb-2">
@@ -98,22 +96,28 @@
                       Pam Archer
                     </h5>
                     <p class="text-card-heading2 font-weight-normal text-sm">
-                      Web Design / Full Stack Developer
+                      Web Design / Full Stack Development
                     </p>
                   </div>
                 </div>
               </div>
               <div class="card-body p-2">
-                <h6 class="text-uppercase text-card-heading1 text-xs font-weight-bolder">About</h6>
-                <p class="montserrat-text" style="color:#495057">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Scelerisque viverra mauris in aliquam sem fringilla. Suscipit adipiscing bibendum est ultricies integer quis auctor. Auctor elit sed vulputate mi sit amet mauris. Aliquet lectus proin nibh nisl condimentum id venenatis a. Mus mauris vitae ultricies leo integer malesuada. Feugiat nibh sed pulvinar proin gravida. Quisque egestas diam in arcu cursus euismod quis viverra nibh. Ac turpis egestas sed tempus urna et pharetra pharetra massa. Condimentum lacinia quis vel eros donec ac odio. Eros donec ac odio tempor orci dapibus ultrices in iaculis.
+                <h6 class="text-uppercase text-card-heading1 text-xs font-weight-bolder">About Myself</h6>
+                <p class="montserrat-text" style="color:#495057; margin: 5px">I am from Broomfield, Colorado a small bedroom community north of Denver. &nbsp I moved here 5 years ago from the California Bay Area with my spouse to be closer to family and to enjoy the great outdoors that Colorado offers including bicycling, snowboarding and incredible hiking. &nbsp I also love scuba diving and traveling to different world destinations.
                 </p>
-                <ul class="list-group text-bio-body">
-                  <li class="list-group-item border-0 ps-0 text-sm">
-                    <span class="text-bio-heading1">&nbsp Email:</span>
-                    <span class="text-card-heading2 text-xs font-weight-normal">&nbsp; pamearch10@gmail.com</span>
+                <p class="montserrat-text" style="color:#495057; margin: 5px">
+                For the past 25+ years, I have worked in the Healthcare industry leading technical teams in the design and delivery of complex software applications. &nbsp I love taking a problem and defining solutions to solve that problem. &nbsp It has been very rewarding to see direct outcomes of the work my team does and how that shows up in the final product.  
+                </p>
+                <p class="montserrat-text" style="color:#495057">
+                Although this has been a very fulfilling career, I have recently chosen to take an early retirement to get back to my passion of hands-on web development, building beautiful but functional sites for non-profits and small businesses. &nbsp I am currently attending an MIT full stack web development certification program whose projects are featured on this site to bring my skills current and support this goal.  
+                </p>
+                <!-- <ul class="list-group text-card-body"> -->
+                <ul class="list-group-contact">
+                  <li class="list-group-item border-0 ps-0 mb-1 text-sm">
+                      <span class="text-bio-heading1">&nbsp Email:</span>
+                      <span class="text-card-heading2 text-xs font-weight-normal">&nbsp; pamearch10@gmail.com</span>
                   </li>
-                  <li class="list-group-item border-0 ps-0 text-sm">
+                  <li class="list-group-item border-0 ps-0 mb-1 text-sm">
                     <span class="text-bio-heading1">&nbsp Location:</span>
                     <span class="text-card-heading2 text-xs font-weight-normal">&nbsp; Colorado, USA</span>
                   </li>
@@ -124,30 +128,27 @@
                   </li>
                   <li class="list-group-item border-0 ps-0 text-sm">
                     <span class="text-bio-heading1">&nbsp Social:</span>
-                  </li>
-                  <li class="list-group-item border-0 ps-0 text-sm">
-                    &nbsp;&nbsp;&nbsp;&nbsp; 
-                    <a href="http://facebook.com/pamela.archer.52" class="btn btn-facebook btn-lg mb-0 mb-0 px-2 py-1 py-1">
+
+                    &nbsp;&nbsp;&nbsp;
+                    <a href="http://facebook.com/pamela.archer.52" class="btn btn-facebook btn-lg mt-2 mb-0 mb-0 px-1 py-1 py-1">
                       <i class="fab fa-facebook fa-lg"></i>&nbsp Facebook
                     </a>
                     &nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="http://instagram.com/pamela.archer.52" class="btn btn-instagram btn-lg mb-0 px-2 py-1">
+                    <a href="http://instagram.com/pamela.archer.52" class="btn btn-instagram btn-lg mt-2 mb-0 px-2 py-1">
                       <i class="fab fa-instagram fa-lg" ></i>&nbsp Instagram
                     </a>
-                  </li>
-                  <li class="list-group-item border-0 ps-0 text-sm">
                     &nbsp;&nbsp;&nbsp;&nbsp; 
-                    <a href="http://twitter.com/pamearch10" class="btn btn-twitter btn-lg mb-0 px-3 py-1">
+                    <a href="http://twitter.com/pamearch10" class="btn btn-twitter btn-lg mt-2 mb-0 px-2 py-1">
                       <i class="fab fa-twitter fa-lg"></i>&nbsp Twitter
                     </a>
-                    &nbsp;&nbsp;&nbsp;&nbsp; 
-                    <a href="https://www.youtube.com/channel/UCLt6_Unl7FrCivyF4gpuPtQ" class="btn btn-youtube btn-lg mb-0 px-2 py-1">
-                      <i class="fab fa-youtube fa-lg"></i>&nbsp YouTube
-                    </a>
                   </li>
                   <li class="list-group-item border-0 ps-0 text-sm">
-                    &nbsp;&nbsp;&nbsp;&nbsp; 
-                    <a href="https://www.linkedin.com/in/pamela-archer-671b471/" class="btn btn-linkedin btn-lg mb-0 px-2 py-1">
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a href="https://www.youtube.com/channel/UCLt6_Unl7FrCivyF4gpuPtQ" class="btn btn-youtube mt-2 btn-lg mb-2 px-2 py-1">
+                      <i class="fab fa-youtube fa-lg"></i>&nbsp YouTube
+                    </a>
+                    &nbsp;
+                    <a href="https://www.linkedin.com/in/pamela-archer-671b471/" class="btn btn-linkedin btn-lg m-2 mb-2 px-2 py-1">
                       <i class="fab fa-linkedin fa-lg"></i>&nbsp LinkedIn
                     </a>
                   </li>
@@ -158,26 +159,40 @@
           </div>
         <div class="col-7">
           <h5 class="text-bio-heading1 font-weight-bolder">
-            Work History
+            More About Me
           </h5>
-          
-          <!-- <p class="text-bio-body text-sm para-spacer"> -->
-          <p class="montserrat-text" style="color:#dee2e6; font-size: 16px;">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Scelerisque viverra mauris in aliquam sem fringilla. Suscipit adipiscing bibendum est ultricies integer quis auctor. Auctor elit sed vulputate mi sit amet mauris. Aliquet lectus proin nibh nisl condimentum id venenatis a. Mus mauris vitae ultricies leo integer malesuada. Feugiat nibh sed pulvinar proin gravida. Quisque egestas diam in arcu cursus euismod quis viverra nibh. Ac turpis egestas sed tempus urna et pharetra pharetra massa. Condimentum lacinia quis vel eros donec ac odio. Eros donec ac odio tempor orci dapibus ultrices in iaculis.
-          </p>
-          <p class="montserrat-text" style="color:#dee2e6; font-size: 16px;">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Scelerisque viverra mauris in aliquam sem fringilla. Suscipit adipiscing bibendum est ultricies integer quis auctor. Auctor elit sed vulputate mi sit amet mauris. Aliquet lectus proin nibh nisl condimentum id venenatis a. Mus mauris vitae ultricies leo integer malesuada. Feugiat nibh sed pulvinar proin gravida. Quisque egestas diam in arcu cursus euismod quis viverra nibh. Ac turpis egestas sed tempus urna et pharetra pharetra massa. Condimentum lacinia quis vel eros donec ac odio. Eros donec ac odio tempor orci dapibus ultrices in iaculis.
+          <p class="text-sm">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/AP2OZgL_7ms" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </p>
           <h5 class="text-bio-heading1 font-weight-bolder">
-            Video
+            Professional Summary
           </h5>
-          <p class="text-sm para-spacer">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/-MK0WUqsmiU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <!-- <p class="text-bio-body text-sm para-spacer"> -->
+          <p class="montserrat-text" style="color:#dee2e6; font-size: 16px;">
+            I joined Kaiser Permanente Health Plan in 2004 as a technical solutions consultant within their internal consulting organization responsible for Information Technology programs requirements gathering and technical designs. &nbsp I worked closely with business partners to deliver optimal technology solutions to address their Membership and Claims related business problems. &nbsp Over the next 18 years, I continued to support large systems replacement and enhancement programs through promotions to different leadership roles including Principal Solutions Architect, Senior and Executive Director where I led teams in the design and delivery of software. 
+          </p>
+          <p class="montserrat-text" style="color:#dee2e6; font-size: 16px;">
+            Prior to joining Kaiser, I worked for the St Alphonsus Regional Health System in Boise, ID as their Director of IT Planning and Development.&nbsp I led an IT team of analysts, developers and project managers in the delivery of healthcare solutions.
+          </p>
+          <h6 class="text-bio-heading1 font-weight-bolder">
+            Degrees and Professional Development
+          <ul style="list-style-type:square; color:#dee2e6; font-size: 16px">
+            <li class="montserrat-text" style="color:#dee2e6; font-size: 16px; margin-top: 6px; ">Bachelors Degree in Computer Science - Seattle Pacific University
+            </li>
+            <li class="montserrat-text" style="color:#dee2e6; font-size: 16px; margin-top: 6px">Kaiser Permanente Strategic Leadership Program
+            </li>
+            <li class="montserrat-text" style="color:#dee2e6; font-size: 16px; margin-top: 6px">Wharton School of Business – Business Strategy Competitive Advantage Course
+            </li>
+            <li class="montserrat-text" style="color:#dee2e6; font-size: 16px; margin-top: 6px">Leading SAFe Agile and SAFe Agile Product Owner/Product Management
+            </li>
         </div>
       </div>
     </div>
   </section>
 
-    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js">
+    </script>
+
+    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
   </body>
 </html>
