--- a/projects.html
+++ b/projects.html
@@ -53,56 +53,56 @@
     }
     </style>
 
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" aria-label="Offcanvas navbar large">
-      <div class="container-fluid">
-        <img src="./assets/img/pamarcher.jpg" class="rounded-circle" height="30px" width="30px">
-        <a class="navbar-brand" >&nbsp Pam Archer's Web Design Portfolio</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbar2" aria-labelledby="offcanvasNavbar2Label">
-          <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbar2Label">Choose From</h5>
-            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-          </div>
-          <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="./index.html">About</a>
-              </li>
-              <!-- <li class="nav-item">
-                <a class="nav-link" href="./profile.html">Profile</a>
-              </li> -->
-              <li class="nav-item">
-                <a class="nav-link active" href="./projects.html">Projects</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  App Demos
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="https://pamelaarcher.github.io/addpacmen">Pacman Factory Demo</a></li>
-                  <li><a class="dropdown-item" href="https://pamelaarcher.github.io/movingeyes">Roving Eyes Demo</a></li>
-                  <li><a class="dropdown-item" href="https://pamelaarcher.github.io/bostontransit">Boston Bus Tracking Demo</a></li>
-                  <li><a class="dropdown-item" href="https://pamelaarcher.github.io/ballintervals">Enhanced Ball Simulation Demo</a></li>
-                  <li><a class="dropdown-item" href="https://pamelaarcher.github.io/bigbang">Big Bang Demo</a></li>
-                  <li><a class="dropdown-item" href="https://pamelaarcher.github.io/dynamicgrid/">Dynamic Grid</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://github.com/pamelaarcher">Repositories</a>
-              </li>
-              <li class="nav-item mt-2 mx-2">
-                <a class="fab fa-github fa-lg" href="https://github.com/pamelaarcher"></a>
-              </li>
-              <li class="nav-item mt-2 ms-2">
-                <a class="fab fa-linkedin fa-lg" href="https://www.linkedin.com/in/pamela-archer-671b471/"></a>
-              </li>
-            </ul>
-          </div>
-        </div>
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" aria-label="Offcanvas navbar large">
+  <div class="container-fluid">
+    <img src="./assets/img/pamarcher.jpg" class="rounded-circle" height="30px" width="30px">
+    <a class="navbar-brand" >&nbsp Pam Archer's Web Design Portfolio</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbar2" aria-labelledby="offcanvasNavbar2Label">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasNavbar2Label">Choose From</h5>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
-    </nav>
+      <div class="offcanvas-body">
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./profile.html">Profile</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="./projects.html">Projects</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              App Demos
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="https://pamelaarcher.github.io/addpacmen">Pacman Factory Demo</a></li>
+              <li><a class="dropdown-item" href="https://pamelaarcher.github.io/movingeyes">Roving Eyes Demo</a></li>
+              <li><a class="dropdown-item" href="https://pamelaarcher.github.io/bostontransit">Boston Bus Tracking Demo</a></li>
+              <li><a class="dropdown-item" href="https://pamelaarcher.github.io/ballintervals">Enhanced Ball Simulation Demo</a></li>
+              <li><a class="dropdown-item" href="https://pamelaarcher.github.io/bigbang">Big Bang Demo</a></li>
+              <li><a class="dropdown-item" href="https://pamelaarcher.github.io/dynamicgrid/">Dynamic Grid</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/pamelaarcher">Repositories</a>
+          </li>
+          <li class="nav-item mt-2 mx-2">
+            <a class="fab fa-github fa-lg" href="https://github.com/pamelaarcher"></a>
+          </li>
+          <li class="nav-item mt-2 ms-2">
+            <a class="fab fa-linkedin fa-lg" href="https://www.linkedin.com/in/pamela-archer-671b471/"></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</nav>
 
   <!-- Profile information inclusion of about, bio and video -->
   <section id="projectheader">
@@ -212,10 +212,9 @@
       </div>
     </div>
 </section>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js">
+</script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"> 
-    </script>
-
-    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
   </body>
 </html>
