--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               <p class="rambla-text" style="color:#b3cce4; font-size: 24px; font-style: italic">
                 My passion is building beautiful but functional sites for non-profits and small businesses
             </p>
-            <img src="./assets/img/pamarcher2.jpg" alt="" class="img-fluid rounded-circle w-85 ms-5">
+            <img src="./assets/img/pamarcher2.JPG" alt="" class="img-fluid rounded-circle w-85 ms-5">
             <div class="float-end">
               <p>&nbsp</p>
               <a href="./profile.html" role="button" class="btn btn-landing mb-0 px-2 py-1">More About Me
