--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                   App Demos
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="https://pamelaarcher.github.io/addpacmen">Pacman Factory Demo</a></li>
+                  <li><a class="dropdown-item" href="https://pamelaarcher.github.io/addpacmen" target="_blank">Pacman Factory Demo</a></li>
                   <li><a class="dropdown-item" href="https://pamelaarcher.github.io/movingeyes">Roving Eyes Demo</a></li>
                   <li><a class="dropdown-item" href="https://pamelaarcher.github.io/bostontransit">Boston Bus Tracking Demo</a></li>
                   <li><a class="dropdown-item" href="https://pamelaarcher.github.io/ballintervals">Enhanced Ball Simulation Demo</a></li>
