--- a/projects.html
+++ b/projects.html
@@ -81,12 +81,12 @@
               App Demos
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="https://pamelaarcher.github.io/addpacmen">Pacman Factory Demo</a></li>
-              <li><a class="dropdown-item" href="https://pamelaarcher.github.io/movingeyes">Roving Eyes Demo</a></li>
-              <li><a class="dropdown-item" href="https://pamelaarcher.github.io/bostontransit">Boston Bus Tracking Demo</a></li>
-              <li><a class="dropdown-item" href="https://pamelaarcher.github.io/ballintervals">Enhanced Ball Simulation Demo</a></li>
-              <li><a class="dropdown-item" href="https://pamelaarcher.github.io/bigbang">Big Bang Demo</a></li>
-              <li><a class="dropdown-item" href="https://pamelaarcher.github.io/dynamicgrid/">Dynamic Grid</a></li>
+               <li><a class="dropdown-item" href="https://pamelaarcher.github.io/addpacmen" target="_blank">Pacman Factory Demo</a></li>
+               <li><a class="dropdown-item" href="https://pamelaarcher.github.io/movingeyes" target="_blank">Roving Eyes Demo</a></li>
+               <li><a class="dropdown-item" href="https://pamelaarcher.github.io/bostontransit" target="_blank">Boston Bus Tracking Demo</a></li>
+               <li><a class="dropdown-item" href="https://pamelaarcher.github.io/ballintervals" target="_blank">Enhanced Ball Simulation Demo</a></li>
+               <li><a class="dropdown-item" href="https://pamelaarcher.github.io/bigbang" target="_blank">Big Bang Demo</a></li>
+               <li><a class="dropdown-item" href="https://pamelaarcher.github.io/dynamicgrid/" target="_blank">Dynamic Grid</a></li>
             </ul>
           </li>
           <li class="nav-item">
